Complete tutorial repository

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -145,7 +145,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId 'com.wilburlua.NativeModules'
+        applicationId 'com.wilburlua.com.wilburlua.nativemodules'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
